--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "webpack serve --open -c webpack/dev.js",
     "deploy": "gh-pages -d dist -m \"Deploy at $(date '+%F %T')\"",
     "lint": "stylelint -c .config/stylelint.config.js --mw 0 .",
-    "lint:fix": "stylelint -c .config/styleling.config.js --fix .",
-    "test": "jest"
+    "lint:fix": "stylelint -c .config/styleling.config.js --fix ."
   },
   "keywords": [],
   "author": "",
