--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.0.3",
     "prettier": "^3.3.3",
     "style-loader": "^4.0.0",
     "stylelint": "^16.9.0",
